Fix WebVR requestAnimationFrame leaking

Manually clear the Member<ScriptedAnimationController> handle in VRDisplay like Document does in order to prevent leaks when the Document is destroyed and there are still outstanding requestAnimationFrame callbacks.

Re-add the two layout tests that were failing due to detecting the leaks.

BUG=679401

Review-Url: https://codereview.chromium.org/2622943002
Cr-Commit-Position: refs/heads/master@{#443711}

Former-commit-id: d8028087727891a6575e8209daecf58035a95723