third_party/WebKit/Source/modules/vr/VRDisplay.cpp
@@ -753,6 +753,7 @@ const AtomicString& VRDisplay::interfaceName() const {
 
 void VRDisplay::contextDestroyed(ExecutionContext*) {
   forceExitPresent();
+  m_scriptedAnimationController.clear();
 }
 
 bool VRDisplay::hasPendingActivity() const {
